display image as background of webpage, and fix font to be readable for user

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,18 @@ h1 {
   border-color: black;
   border-width: 10px;
   text-align: center;
-  background-color: rgb(195, 182, 182);
-  color: black;
+  background-color: rgb(8, 4, 79);
+  color: white;
 }
 
+body {
+  color: white;
+  font-size: larger;
+}
 
 html {
   text-align: center;
-  background-color: rgb(195, 182, 182);
+  background-image: url(https://media.istockphoto.com/photos/empty-dark-blue-studio-room-with-light-and-shadow-abstract-background-picture-id1339787499?b=1&k=20&m=1339787499&s=170667a&w=0&h=psnH04yZpoVzxa4xTZt4hDwff5WiO0cQrtnYdRttkSI=);
+  background-repeat: no-repeat;
+  background-size:100%;
 }
